Corrected CSS on nav elements, adjusted projects bottom padding, corrected issue with navbar being visible while actively scaling screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-
+/* * { border: 1px solid yellowgreen; } */
 
 main {
   display: flex;
@@ -16,9 +16,9 @@ main {
   min-width: 100vw;
   background: linear-gradient(350deg, #2272ff, #b414b2, #232f3e);
   background-size: 600% 600%;
-  -webkit-animation: AnimationName 34s ease infinite;
-  -moz-animation: AnimationName 34s ease infinite;
-  animation: AnimationName 34s ease infinite;
+  -webkit-animation: GradientAnimation 34s ease infinite;
+  -moz-animation: GradientAnimation 34s ease infinite;
+  animation: GradientAnimation 34s ease infinite;
 }
 
 hr {
@@ -31,7 +31,7 @@ hr {
   margin: -1px 0;
 }
 
-@-webkit-keyframes AnimationName {
+@-webkit-keyframes GradientAnimation {
   0% {
     background-position: 93% 0%;
   }
@@ -42,7 +42,7 @@ hr {
     background-position: 93% 0%;
   }
 }
-@-moz-keyframes AnimationName {
+@-moz-keyframes GradientAnimation {
   0% {
     background-position: 93% 0%;
   }
@@ -53,7 +53,7 @@ hr {
     background-position: 93% 0%;
   }
 }
-@keyframes AnimationName {
+@keyframes GradientAnimation {
   0% {
     background-position: 93% 0%;
   }
@@ -86,9 +86,10 @@ header {
 
 .nav-menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   gap: 60px;
+  padding-right: 16px;
 }
 
 .nav-title {
@@ -100,6 +101,7 @@ header {
 .hamburger {
   display: none;
   cursor: pointer;
+  padding-right: 16px;
 }
 
 #projects {
@@ -108,13 +110,14 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 15vh;
 }
 
 #projects h2 {
   font-family: "Lato", sans-serif;
   color: whitesmoke;
   text-align: center;
-  padding-top: 15vh;
+
 }
 
 .project-1 {
@@ -153,7 +156,7 @@ header {
   justify-content: space-evenly;
   width: 100%;
   box-sizing: none;
-  padding-bottom: 100px;
+  padding-bottom: 30vh;
 }
 .project {
   display: flex;
@@ -230,7 +233,7 @@ header {
 #about-me {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   margin: 200px;
 }
@@ -253,6 +256,7 @@ header {
 
 .about-me-title {
   color: whitesmoke;
+  font-family: "Karla", sans-serif;
 }
 
 .about-me-text {
@@ -313,6 +317,7 @@ header {
 
   .hamburger {
     display: block;
+    padding: 0;
   }
 
   .hamburger.active .bar:nth-child(2) {
@@ -328,7 +333,7 @@ header {
 
   .nav-menu {
     position: fixed;
-    left: -100%;
+    left: -1000%;
     top: 70px;
     gap: 0;
     flex-direction: column;
@@ -344,6 +349,7 @@ header {
 
   .nav-menu.active {
     left: 0;
+    padding: 0;
   }
 
   .project-1 img{
